// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SiteFooter /> renders correctly does not render language selector 1`] = `
<footer
  aria-label="Page Footer"
  className="footer d-flex justify-content-center border-top py-3 px-4"
  role="contentinfo"
>
  <div
    className="max-width-1180 d-grid"
  >
    <div
      className="area-1"
    >
      <a
        aria-label="edX Home"
        href="https://www.example.com"
      >
        <img
          alt="edx Logo"
          src="test-file-stub"
        />
      </a>
    </div>
    <div
      className="area-2"
    >
      <h2>
        edX
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/about-us"
          >
            About
          </a>
        </li>
        <li>
          <a
            href="https://business.edx.org/?utm_test=utm_test_value"
          >
            edX for Business
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/affiliate-program"
          >
            Affiliates
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/open"
          >
            Open edX
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/careers"
          >
            Careers
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/news-announcements"
          >
            News
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-3"
    >
      <h2>
        Legal
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/terms-of-service"
          >
            Terms of Service & Honor Code
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/privacy-policy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/accessibility"
          >
            Accessibility Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/trademarks"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/sitemap"
          >
            Sitemap
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-4"
    >
      <h2>
        Connect
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/blog"
          >
            Blog
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/contact"
          >
            Contact Us
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/support"
          >
            Help Center
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/media-kit"
          >
            Media Kit
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/donate"
          >
            Donate
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-5"
    >
      <ul
        className="d-flex flex-row justify-content-between list-unstyled max-width-222 p-0 mb-4"
      >
        <li>
          <a
            href="https://www.facebook.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Facebook"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-facebook-square fa-w-14 fa-2x social-icon"
              data-icon="facebook-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M448 80v352c0 26.5-21.5 48-48 48h-85.3V302.8h60.6l8.7-67.6h-69.3V192c0-19.6 5.4-32.9 33.5-32.9H384V98.7c-6.2-.8-27.4-2.7-52.2-2.7-51.6 0-87 31.5-87 89.4v49.9H184v67.6h60.9V480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Like edX on Facebook
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://www.twitter.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Twitter"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-twitter-square fa-w-14 fa-2x social-icon"
              data-icon="twitter-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Follow edX on Twitter
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://www.youtube.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Youtube"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-youtube-square fa-w-14 fa-2x social-icon"
              data-icon="youtube-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M186.8 202.1l95.2 54.1-95.2 54.1V202.1zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-42 176.3s0-59.6-7.6-88.2c-4.2-15.8-16.5-28.2-32.2-32.4C337.9 128 224 128 224 128s-113.9 0-142.2 7.7c-15.7 4.2-28 16.6-32.2 32.4-7.6 28.5-7.6 88.2-7.6 88.2s0 59.6 7.6 88.2c4.2 15.8 16.5 27.7 32.2 31.9C110.1 384 224 384 224 384s113.9 0 142.2-7.7c15.7-4.2 28-16.1 32.2-31.9 7.6-28.5 7.6-88.1 7.6-88.1z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Subscribe to the edX YouTube channel
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://www.linkedin.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="LinkedIn"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-linkedin fa-w-14 fa-2x social-icon"
              data-icon="linkedin"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Follow edX on LinkedIn
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://reddit.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Reddit"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-reddit-square fa-w-14 fa-2x social-icon"
              data-icon="reddit-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M283.2 345.5c2.7 2.7 2.7 6.8 0 9.2-24.5 24.5-93.8 24.6-118.4 0-2.7-2.4-2.7-6.5 0-9.2 2.4-2.4 6.5-2.4 8.9 0 18.7 19.2 81 19.6 100.5 0 2.4-2.3 6.6-2.3 9 0zm-91.3-53.8c0-14.9-11.9-26.8-26.5-26.8-14.9 0-26.8 11.9-26.8 26.8 0 14.6 11.9 26.5 26.8 26.5 14.6 0 26.5-11.9 26.5-26.5zm90.7-26.8c-14.6 0-26.5 11.9-26.5 26.8 0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-11.9 26.8-26.5 0-14.9-11.9-26.8-26.8-26.8zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-99.7 140.6c-10.1 0-19 4.2-25.6 10.7-24.1-16.7-56.5-27.4-92.5-28.6l18.7-84.2 59.5 13.4c0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-12.2 26.8-26.8 0-14.6-11.9-26.8-26.8-26.8-10.4 0-19.3 6.2-23.8 14.9l-65.7-14.6c-3.3-.9-6.5 1.5-7.4 4.8l-20.5 92.8c-35.7 1.5-67.8 12.2-91.9 28.9-6.5-6.8-15.8-11-25.9-11-37.5 0-49.8 50.4-15.5 67.5-1.2 5.4-1.8 11-1.8 16.7 0 56.5 63.7 102.3 141.9 102.3 78.5 0 142.2-45.8 142.2-102.3 0-5.7-.6-11.6-2.1-17 33.6-17.2 21.2-67.2-16.1-67.2z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Subscribe to the edX subreddit
            </span>
          </a>
        </li>
      </ul>
      <ul
        className="d-flex flex-row justify-content-between list-unstyled max-width-264 p-0 mb-5"
      >
        <li>
          <a
            href="https://store.apple.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Download the edX mobile app from the Apple App Store"
              className="max-height-39"
              src="https://prod-edxapp.edx-cdn.org/static/images/app/app_store_badge_135x40.d0558d910630.svg"
            />
          </a>
        </li>
        <li>
          <a
            href="https://play.google.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Download the edX mobile app from Google Play"
              className="max-height-39"
              src="https://prod-edxapp.edx-cdn.org/static/images/app/google_play_badge_45.6ea466e328da.png"
            />
          </a>
        </li>
      </ul>
      <p>
        © 2012–2019 edX Inc.
        <br />
        EdX, Open edX, and MicroMasters are registered trademarks of edX Inc. | 深圳市恒宇博科技有限公司 
        <a
          href="http://www.beian.miit.gov.cn"
        >
          粤ICP备17044299号-2
        </a>
      </p>
    </div>
  </div>
</footer>
`;

exports[`<SiteFooter /> renders correctly does not render mobile links 1`] = `
<footer
  aria-label="Page Footer"
  className="footer d-flex justify-content-center border-top py-3 px-4"
  role="contentinfo"
>
  <div
    className="max-width-1180 d-grid"
  >
    <div
      className="area-1"
    >
      <a
        aria-label="edX Home"
        href="https://www.example.com"
      >
        <img
          alt="edx Logo"
          src="test-file-stub"
        />
      </a>
      <div
        className="i18n d-flex mt-2"
      >
        <form
          className="d-flex align-items-start"
          onSubmit={[Function]}
        >
          <label
            htmlFor="site-footer-language-select"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-language fa-w-20 fa-2x text-primary"
              data-icon="language"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M152.1 236.2c-3.5-12.1-7.8-33.2-7.8-33.2h-.5s-4.3 21.1-7.8 33.2l-11.1 37.5H163zM616 96H336v320h280c13.3 0 24-10.7 24-24V120c0-13.3-10.7-24-24-24zm-24 120c0 6.6-5.4 12-12 12h-11.4c-6.9 23.6-21.7 47.4-42.7 69.9 8.4 6.4 17.1 12.5 26.1 18 5.5 3.4 7.3 10.5 4.1 16.2l-7.9 13.9c-3.4 5.9-10.9 7.8-16.7 4.3-12.6-7.8-24.5-16.1-35.4-24.9-10.9 8.7-22.7 17.1-35.4 24.9-5.8 3.5-13.3 1.6-16.7-4.3l-7.9-13.9c-3.2-5.6-1.4-12.8 4.2-16.2 9.3-5.7 18-11.7 26.1-18-7.9-8.4-14.9-17-21-25.7-4-5.7-2.2-13.6 3.7-17.1l6.5-3.9 7.3-4.3c5.4-3.2 12.4-1.7 16 3.4 5 7 10.8 14 17.4 20.9 13.5-14.2 23.8-28.9 30-43.2H412c-6.6 0-12-5.4-12-12v-16c0-6.6 5.4-12 12-12h64v-16c0-6.6 5.4-12 12-12h16c6.6 0 12 5.4 12 12v16h64c6.6 0 12 5.4 12 12zM0 120v272c0 13.3 10.7 24 24 24h280V96H24c-13.3 0-24 10.7-24 24zm58.9 216.1L116.4 167c1.7-4.9 6.2-8.1 11.4-8.1h32.5c5.1 0 9.7 3.3 11.4 8.1l57.5 169.1c2.6 7.8-3.1 15.9-11.4 15.9h-22.9a12 12 0 0 1-11.5-8.6l-9.4-31.9h-60.2l-9.1 31.8c-1.5 5.1-6.2 8.7-11.5 8.7H70.3c-8.2 0-14-8.1-11.4-15.9z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <div
              className="sr-only"
            >
              Choose Language
            </div>
          </label>
          <select
            className="mx-2 mt-1"
            defaultValue="en"
            id="site-footer-language-select"
            name="site-footer-language-select"
          >
            <option
              value="en"
            >
              English
            </option>
            <option
              value="es-419"
            >
              español
            </option>
          </select>
          <button
            className="mt-1"
            type="submit"
          >
            Apply
          </button>
        </form>
      </div>
    </div>
    <div
      className="area-2"
    >
      <h2>
        edX
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/about-us"
          >
            About
          </a>
        </li>
        <li>
          <a
            href="https://business.edx.org/?utm_test=utm_test_value"
          >
            edX for Business
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/affiliate-program"
          >
            Affiliates
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/open"
          >
            Open edX
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/careers"
          >
            Careers
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/news-announcements"
          >
            News
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-3"
    >
      <h2>
        Legal
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/terms-of-service"
          >
            Terms of Service & Honor Code
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/privacy-policy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/accessibility"
          >
            Accessibility Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/trademarks"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/sitemap"
          >
            Sitemap
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-4"
    >
      <h2>
        Connect
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/blog"
          >
            Blog
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/contact"
          >
            Contact Us
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/support"
          >
            Help Center
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/media-kit"
          >
            Media Kit
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/donate"
          >
            Donate
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-5"
    >
      <ul
        className="d-flex flex-row justify-content-between list-unstyled max-width-222 p-0 mb-4"
      >
        <li>
          <a
            href="https://www.facebook.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Facebook"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-facebook-square fa-w-14 fa-2x social-icon"
              data-icon="facebook-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M448 80v352c0 26.5-21.5 48-48 48h-85.3V302.8h60.6l8.7-67.6h-69.3V192c0-19.6 5.4-32.9 33.5-32.9H384V98.7c-6.2-.8-27.4-2.7-52.2-2.7-51.6 0-87 31.5-87 89.4v49.9H184v67.6h60.9V480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Like edX on Facebook
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://www.twitter.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Twitter"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-twitter-square fa-w-14 fa-2x social-icon"
              data-icon="twitter-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Follow edX on Twitter
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://www.youtube.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Youtube"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-youtube-square fa-w-14 fa-2x social-icon"
              data-icon="youtube-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M186.8 202.1l95.2 54.1-95.2 54.1V202.1zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-42 176.3s0-59.6-7.6-88.2c-4.2-15.8-16.5-28.2-32.2-32.4C337.9 128 224 128 224 128s-113.9 0-142.2 7.7c-15.7 4.2-28 16.6-32.2 32.4-7.6 28.5-7.6 88.2-7.6 88.2s0 59.6 7.6 88.2c4.2 15.8 16.5 27.7 32.2 31.9C110.1 384 224 384 224 384s113.9 0 142.2-7.7c15.7-4.2 28-16.1 32.2-31.9 7.6-28.5 7.6-88.1 7.6-88.1z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Subscribe to the edX YouTube channel
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://www.linkedin.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="LinkedIn"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-linkedin fa-w-14 fa-2x social-icon"
              data-icon="linkedin"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Follow edX on LinkedIn
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://reddit.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Reddit"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-reddit-square fa-w-14 fa-2x social-icon"
              data-icon="reddit-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M283.2 345.5c2.7 2.7 2.7 6.8 0 9.2-24.5 24.5-93.8 24.6-118.4 0-2.7-2.4-2.7-6.5 0-9.2 2.4-2.4 6.5-2.4 8.9 0 18.7 19.2 81 19.6 100.5 0 2.4-2.3 6.6-2.3 9 0zm-91.3-53.8c0-14.9-11.9-26.8-26.5-26.8-14.9 0-26.8 11.9-26.8 26.8 0 14.6 11.9 26.5 26.8 26.5 14.6 0 26.5-11.9 26.5-26.5zm90.7-26.8c-14.6 0-26.5 11.9-26.5 26.8 0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-11.9 26.8-26.5 0-14.9-11.9-26.8-26.8-26.8zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-99.7 140.6c-10.1 0-19 4.2-25.6 10.7-24.1-16.7-56.5-27.4-92.5-28.6l18.7-84.2 59.5 13.4c0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-12.2 26.8-26.8 0-14.6-11.9-26.8-26.8-26.8-10.4 0-19.3 6.2-23.8 14.9l-65.7-14.6c-3.3-.9-6.5 1.5-7.4 4.8l-20.5 92.8c-35.7 1.5-67.8 12.2-91.9 28.9-6.5-6.8-15.8-11-25.9-11-37.5 0-49.8 50.4-15.5 67.5-1.2 5.4-1.8 11-1.8 16.7 0 56.5 63.7 102.3 141.9 102.3 78.5 0 142.2-45.8 142.2-102.3 0-5.7-.6-11.6-2.1-17 33.6-17.2 21.2-67.2-16.1-67.2z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Subscribe to the edX subreddit
            </span>
          </a>
        </li>
      </ul>
      <p>
        © 2012–2019 edX Inc.
        <br />
        EdX, Open edX, and MicroMasters are registered trademarks of edX Inc. | 深圳市恒宇博科技有限公司 
        <a
          href="http://www.beian.miit.gov.cn"
        >
          粤ICP备17044299号-2
        </a>
      </p>
    </div>
  </div>
</footer>
`;

exports[`<SiteFooter /> renders correctly does not render social links 1`] = `
<footer
  aria-label="Page Footer"
  className="footer d-flex justify-content-center border-top py-3 px-4"
  role="contentinfo"
>
  <div
    className="max-width-1180 d-grid"
  >
    <div
      className="area-1"
    >
      <a
        aria-label="edX Home"
        href="https://www.example.com"
      >
        <img
          alt="edx Logo"
          src="test-file-stub"
        />
      </a>
      <div
        className="i18n d-flex mt-2"
      >
        <form
          className="d-flex align-items-start"
          onSubmit={[Function]}
        >
          <label
            htmlFor="site-footer-language-select"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-language fa-w-20 fa-2x text-primary"
              data-icon="language"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M152.1 236.2c-3.5-12.1-7.8-33.2-7.8-33.2h-.5s-4.3 21.1-7.8 33.2l-11.1 37.5H163zM616 96H336v320h280c13.3 0 24-10.7 24-24V120c0-13.3-10.7-24-24-24zm-24 120c0 6.6-5.4 12-12 12h-11.4c-6.9 23.6-21.7 47.4-42.7 69.9 8.4 6.4 17.1 12.5 26.1 18 5.5 3.4 7.3 10.5 4.1 16.2l-7.9 13.9c-3.4 5.9-10.9 7.8-16.7 4.3-12.6-7.8-24.5-16.1-35.4-24.9-10.9 8.7-22.7 17.1-35.4 24.9-5.8 3.5-13.3 1.6-16.7-4.3l-7.9-13.9c-3.2-5.6-1.4-12.8 4.2-16.2 9.3-5.7 18-11.7 26.1-18-7.9-8.4-14.9-17-21-25.7-4-5.7-2.2-13.6 3.7-17.1l6.5-3.9 7.3-4.3c5.4-3.2 12.4-1.7 16 3.4 5 7 10.8 14 17.4 20.9 13.5-14.2 23.8-28.9 30-43.2H412c-6.6 0-12-5.4-12-12v-16c0-6.6 5.4-12 12-12h64v-16c0-6.6 5.4-12 12-12h16c6.6 0 12 5.4 12 12v16h64c6.6 0 12 5.4 12 12zM0 120v272c0 13.3 10.7 24 24 24h280V96H24c-13.3 0-24 10.7-24 24zm58.9 216.1L116.4 167c1.7-4.9 6.2-8.1 11.4-8.1h32.5c5.1 0 9.7 3.3 11.4 8.1l57.5 169.1c2.6 7.8-3.1 15.9-11.4 15.9h-22.9a12 12 0 0 1-11.5-8.6l-9.4-31.9h-60.2l-9.1 31.8c-1.5 5.1-6.2 8.7-11.5 8.7H70.3c-8.2 0-14-8.1-11.4-15.9z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <div
              className="sr-only"
            >
              Choose Language
            </div>
          </label>
          <select
            className="mx-2 mt-1"
            defaultValue="en"
            id="site-footer-language-select"
            name="site-footer-language-select"
          >
            <option
              value="en"
            >
              English
            </option>
            <option
              value="es-419"
            >
              español
            </option>
          </select>
          <button
            className="mt-1"
            type="submit"
          >
            Apply
          </button>
        </form>
      </div>
    </div>
    <div
      className="area-2"
    >
      <h2>
        edX
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/about-us"
          >
            About
          </a>
        </li>
        <li>
          <a
            href="https://business.edx.org/?utm_test=utm_test_value"
          >
            edX for Business
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/affiliate-program"
          >
            Affiliates
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/open"
          >
            Open edX
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/careers"
          >
            Careers
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/news-announcements"
          >
            News
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-3"
    >
      <h2>
        Legal
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/terms-of-service"
          >
            Terms of Service & Honor Code
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/privacy-policy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/accessibility"
          >
            Accessibility Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/trademarks"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/sitemap"
          >
            Sitemap
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-4"
    >
      <h2>
        Connect
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/blog"
          >
            Blog
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/contact"
          >
            Contact Us
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/support"
          >
            Help Center
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/media-kit"
          >
            Media Kit
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/donate"
          >
            Donate
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-5"
    >
      <ul
        className="d-flex flex-row justify-content-between list-unstyled max-width-264 p-0 mb-5"
      >
        <li>
          <a
            href="https://store.apple.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Download the edX mobile app from the Apple App Store"
              className="max-height-39"
              src="https://prod-edxapp.edx-cdn.org/static/images/app/app_store_badge_135x40.d0558d910630.svg"
            />
          </a>
        </li>
        <li>
          <a
            href="https://play.google.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Download the edX mobile app from Google Play"
              className="max-height-39"
              src="https://prod-edxapp.edx-cdn.org/static/images/app/google_play_badge_45.6ea466e328da.png"
            />
          </a>
        </li>
      </ul>
      <p>
        © 2012–2019 edX Inc.
        <br />
        EdX, Open edX, and MicroMasters are registered trademarks of edX Inc. | 深圳市恒宇博科技有限公司 
        <a
          href="http://www.beian.miit.gov.cn"
        >
          粤ICP备17044299号-2
        </a>
      </p>
    </div>
  </div>
</footer>
`;

exports[`<SiteFooter /> renders correctly renders with social and mobile links 1`] = `
<footer
  aria-label="Page Footer"
  className="footer d-flex justify-content-center border-top py-3 px-4"
  role="contentinfo"
>
  <div
    className="max-width-1180 d-grid"
  >
    <div
      className="area-1"
    >
      <a
        aria-label="edX Home"
        href="https://www.example.com"
      >
        <img
          alt="edx Logo"
          src="test-file-stub"
        />
      </a>
      <div
        className="i18n d-flex mt-2"
      >
        <form
          className="d-flex align-items-start"
          onSubmit={[Function]}
        >
          <label
            htmlFor="site-footer-language-select"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-language fa-w-20 fa-2x text-primary"
              data-icon="language"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M152.1 236.2c-3.5-12.1-7.8-33.2-7.8-33.2h-.5s-4.3 21.1-7.8 33.2l-11.1 37.5H163zM616 96H336v320h280c13.3 0 24-10.7 24-24V120c0-13.3-10.7-24-24-24zm-24 120c0 6.6-5.4 12-12 12h-11.4c-6.9 23.6-21.7 47.4-42.7 69.9 8.4 6.4 17.1 12.5 26.1 18 5.5 3.4 7.3 10.5 4.1 16.2l-7.9 13.9c-3.4 5.9-10.9 7.8-16.7 4.3-12.6-7.8-24.5-16.1-35.4-24.9-10.9 8.7-22.7 17.1-35.4 24.9-5.8 3.5-13.3 1.6-16.7-4.3l-7.9-13.9c-3.2-5.6-1.4-12.8 4.2-16.2 9.3-5.7 18-11.7 26.1-18-7.9-8.4-14.9-17-21-25.7-4-5.7-2.2-13.6 3.7-17.1l6.5-3.9 7.3-4.3c5.4-3.2 12.4-1.7 16 3.4 5 7 10.8 14 17.4 20.9 13.5-14.2 23.8-28.9 30-43.2H412c-6.6 0-12-5.4-12-12v-16c0-6.6 5.4-12 12-12h64v-16c0-6.6 5.4-12 12-12h16c6.6 0 12 5.4 12 12v16h64c6.6 0 12 5.4 12 12zM0 120v272c0 13.3 10.7 24 24 24h280V96H24c-13.3 0-24 10.7-24 24zm58.9 216.1L116.4 167c1.7-4.9 6.2-8.1 11.4-8.1h32.5c5.1 0 9.7 3.3 11.4 8.1l57.5 169.1c2.6 7.8-3.1 15.9-11.4 15.9h-22.9a12 12 0 0 1-11.5-8.6l-9.4-31.9h-60.2l-9.1 31.8c-1.5 5.1-6.2 8.7-11.5 8.7H70.3c-8.2 0-14-8.1-11.4-15.9z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <div
              className="sr-only"
            >
              Choose Language
            </div>
          </label>
          <select
            className="mx-2 mt-1"
            defaultValue="en"
            id="site-footer-language-select"
            name="site-footer-language-select"
          >
            <option
              value="en"
            >
              English
            </option>
            <option
              value="es-419"
            >
              español
            </option>
          </select>
          <button
            className="mt-1"
            type="submit"
          >
            Apply
          </button>
        </form>
      </div>
    </div>
    <div
      className="area-2"
    >
      <h2>
        edX
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/about-us"
          >
            About
          </a>
        </li>
        <li>
          <a
            href="https://business.edx.org/?utm_test=utm_test_value"
          >
            edX for Business
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/affiliate-program"
          >
            Affiliates
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/open"
          >
            Open edX
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/careers"
          >
            Careers
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/news-announcements"
          >
            News
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-3"
    >
      <h2>
        Legal
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/terms-of-service"
          >
            Terms of Service & Honor Code
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/privacy-policy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/accessibility"
          >
            Accessibility Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/trademarks"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/sitemap"
          >
            Sitemap
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-4"
    >
      <h2>
        Connect
      </h2>
      <ul
        className="list-unstyled p-0 m-0"
      >
        <li>
          <a
            href="https://www.example.com/blog"
          >
            Blog
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/contact"
          >
            Contact Us
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/support"
          >
            Help Center
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/media-kit"
          >
            Media Kit
          </a>
        </li>
        <li>
          <a
            href="https://www.example.com/donate"
          >
            Donate
          </a>
        </li>
      </ul>
    </div>
    <div
      className="area-5"
    >
      <ul
        className="d-flex flex-row justify-content-between list-unstyled max-width-222 p-0 mb-4"
      >
        <li>
          <a
            href="https://www.facebook.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Facebook"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-facebook-square fa-w-14 fa-2x social-icon"
              data-icon="facebook-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M448 80v352c0 26.5-21.5 48-48 48h-85.3V302.8h60.6l8.7-67.6h-69.3V192c0-19.6 5.4-32.9 33.5-32.9H384V98.7c-6.2-.8-27.4-2.7-52.2-2.7-51.6 0-87 31.5-87 89.4v49.9H184v67.6h60.9V480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Like edX on Facebook
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://www.twitter.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Twitter"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-twitter-square fa-w-14 fa-2x social-icon"
              data-icon="twitter-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Follow edX on Twitter
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://www.youtube.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Youtube"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-youtube-square fa-w-14 fa-2x social-icon"
              data-icon="youtube-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M186.8 202.1l95.2 54.1-95.2 54.1V202.1zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-42 176.3s0-59.6-7.6-88.2c-4.2-15.8-16.5-28.2-32.2-32.4C337.9 128 224 128 224 128s-113.9 0-142.2 7.7c-15.7 4.2-28 16.6-32.2 32.4-7.6 28.5-7.6 88.2-7.6 88.2s0 59.6 7.6 88.2c4.2 15.8 16.5 27.7 32.2 31.9C110.1 384 224 384 224 384s113.9 0 142.2-7.7c15.7-4.2 28-16.1 32.2-31.9 7.6-28.5 7.6-88.1 7.6-88.1z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Subscribe to the edX YouTube channel
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://www.linkedin.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="LinkedIn"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-linkedin fa-w-14 fa-2x social-icon"
              data-icon="linkedin"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Follow edX on LinkedIn
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://reddit.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
            title="Reddit"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-reddit-square fa-w-14 fa-2x social-icon"
              data-icon="reddit-square"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M283.2 345.5c2.7 2.7 2.7 6.8 0 9.2-24.5 24.5-93.8 24.6-118.4 0-2.7-2.4-2.7-6.5 0-9.2 2.4-2.4 6.5-2.4 8.9 0 18.7 19.2 81 19.6 100.5 0 2.4-2.3 6.6-2.3 9 0zm-91.3-53.8c0-14.9-11.9-26.8-26.5-26.8-14.9 0-26.8 11.9-26.8 26.8 0 14.6 11.9 26.5 26.8 26.5 14.6 0 26.5-11.9 26.5-26.5zm90.7-26.8c-14.6 0-26.5 11.9-26.5 26.8 0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-11.9 26.8-26.5 0-14.9-11.9-26.8-26.8-26.8zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-99.7 140.6c-10.1 0-19 4.2-25.6 10.7-24.1-16.7-56.5-27.4-92.5-28.6l18.7-84.2 59.5 13.4c0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-12.2 26.8-26.8 0-14.6-11.9-26.8-26.8-26.8-10.4 0-19.3 6.2-23.8 14.9l-65.7-14.6c-3.3-.9-6.5 1.5-7.4 4.8l-20.5 92.8c-35.7 1.5-67.8 12.2-91.9 28.9-6.5-6.8-15.8-11-25.9-11-37.5 0-49.8 50.4-15.5 67.5-1.2 5.4-1.8 11-1.8 16.7 0 56.5 63.7 102.3 141.9 102.3 78.5 0 142.2-45.8 142.2-102.3 0-5.7-.6-11.6-2.1-17 33.6-17.2 21.2-67.2-16.1-67.2z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            <span
              className="sr-only"
            >
              Subscribe to the edX subreddit
            </span>
          </a>
        </li>
      </ul>
      <ul
        className="d-flex flex-row justify-content-between list-unstyled max-width-264 p-0 mb-5"
      >
        <li>
          <a
            href="https://store.apple.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Download the edX mobile app from the Apple App Store"
              className="max-height-39"
              src="https://prod-edxapp.edx-cdn.org/static/images/app/app_store_badge_135x40.d0558d910630.svg"
            />
          </a>
        </li>
        <li>
          <a
            href="https://play.google.com"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Download the edX mobile app from Google Play"
              className="max-height-39"
              src="https://prod-edxapp.edx-cdn.org/static/images/app/google_play_badge_45.6ea466e328da.png"
            />
          </a>
        </li>
      </ul>
      <p>
        © 2012–2019 edX Inc.
        <br />
        EdX, Open edX, and MicroMasters are registered trademarks of edX Inc. | 深圳市恒宇博科技有限公司 
        <a
          href="http://www.beian.miit.gov.cn"
        >
          粤ICP备17044299号-2
        </a>
      </p>
    </div>
  </div>
</footer>
`;
